Added an endpoint for form based authentication
